# doggy-watch

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-push.yml
database/: Cargo.toml
database/src/: actions.rs  archived.rs  lib.rs  moderators.rs  prelude.rs  requests.rs  users.rs  videos.rs
entity/: Cargo.toml
entity/src/: actions.rs  lib.rs  moderators.rs  prelude.rs  sea_orm_active_enums.rs  videos.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20241211_182453_create_tables.rs
src/: inline.rs  main.rs  markup.rs
src/handle/: about.rs  add.rs  archive.rs  ban.rs  info.rs  list.rs  mod.rs  notify.rs  start.rs
src/handle/moderator/: add.rs  list.rs  mod.rs  remove.rs
youtube/: Cargo.toml
youtube/src/: lib.rs
